--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="card">
         <div class="card-body">
-          <blockquote class="blockquote mb-0">
-            <p>loading...</p>
-            <footer class="blockquote-footer">
-              <cite title="Source Title"></cite>
-            </footer>
-          </blockquote>
+            <blockquote class="blockquote mb-0">
+                <p>loading...</p>
+                <footer class="blockquote-footer">
+                    <cite title="Source Title"></cite>
+                </footer>
+            </blockquote>
         </div>
-        <div class="card-footer">
-          <button class="btn btn-primary">New Quote</div>
-        </div>
-      </div>
+    </div>
+    <script src="./script.js"></script>
 </body>
+
 </html>
