--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <style>
+        body {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .card {
+            width: 80%;
+            max-width: 700px;
+        }
+
+        .card-body {
+            padding: 40px;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,7 +36,38 @@
             </blockquote>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script>
+        // Powered by Quotable
+        // https://github.com/lukePeavey/quotable
+
+        document.addEventListener("DOMContentLoaded", () => {
+            // DOM elements
+            const button = document.querySelector("button");
+            const quote = document.querySelector("blockquote p");
+            const cite = document.querySelector("blockquote cite");
+
+            async function updateQuote() {
+                // Fetch a random quote from the Quotable API
+                const response = await fetch("https://api.quotable.io/random");
+                const data = await response.json();
+                if (response.ok) {
+                    // Update DOM elements
+                    quote.textContent = data.content;
+                    cite.textContent = data.author;
+                } else {
+                    quote.textContent = "An error occured";
+                    console.log(data);
+                }
+            }
+
+            // Attach an event listener to the `button`
+            // button.addEventListener("click", updateQuote);
+
+            // call updateQuote once when page loads
+            updateQuote();
+        });
+
+    </script>
 </body>
 
 </html>
