--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            margin: 0;
+            padding: 0;
         }
 
         .card {
