Changed style of quotes

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
     <div class="quote mono">
         <div class="card-body">
             <blockquote class="blockquote">
-                <p>loading...</p>
-                — <cite title="Source Title"></cite>
+                <p></p>
+                <cite title="Source Title"></cite>
             </blockquote>
         </div>
     </div>
