Changed quote's style

--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
             font-size: 1.5rem;
         }
 
+        .content {
+            font-weight: 200;
+        }
+
         cite {
             font-size: 80%;
+            font-weight: 500;
+            font-style: normal;
         }
 
 
@@ -136,7 +142,7 @@
     <div class="quote mono">
         <div class="card-body">
             <blockquote class="blockquote">
-                <p></p>
+                <p class="content"></p>
                 <cite title="Source Title"></cite>
             </blockquote>
         </div>
