--- a/index.html
+++ b/index.html
@@ -159,15 +159,22 @@
             const size_buttons = document.querySelectorAll(".settings .size button");
 
             async function updateQuote() {
-                const response = await fetch("https://api.quotable.io/random");
-                const data = await response.json();
-                if (response.ok) {
-                    quote_text.textContent = data.content;
-                    cite.textContent = data.author;
-                } else {
-                    quote_text.textContent = "An error occured";
+                try {
+                    const response = await fetch("https://api.quotable.io/random");
+                    const data = await response.json();
+
+                    if (response.ok) {
+                        quote_text.textContent = data.content;
+                        cite.textContent = data.author;
+                    } else {
+                        quote_text.textContent = "An error occured";
+                        console.log(data);
+                    }
+                } catch (error) {
+                    quote_text.textContent = "Oops! There is a problem with the quotes server.";
                     console.log(data);
                 }
+
             }
             async function updateQuoteCustom(f) {
                 const response = await fetch(f);
