--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="quote mono">
         <div class="card-body">
             <blockquote class="blockquote">
-                <p class="content"></p>
+                - <p class="content"></p>
                 <cite title="Source Title"></cite>
             </blockquote>
         </div>
