--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
     <div class="quote mono">
         <div class="card-body">
             <blockquote class="blockquote">
-                - <p class="content"></p>
-                <cite title="Source Title"></cite>
+                <p class="content"></p>
+                - <cite title="Source Title"></cite>
             </blockquote>
         </div>
     </div>
