change quote dash

--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
             color: rgba(255, 255, 255, 0.9);
             background-color: rgb(25, 25, 25) !important;
         }
+        
+        .dash {
+            opacity: 0.2;
+            line-height: 0.8rem;
+        }
     </style>
 </head>
 
@@ -144,7 +149,7 @@
         <div class="card-body">
             <blockquote class="blockquote">
                 <p class="content"></p>
-                - <cite title="Source Title"></cite>
+                <span class="dash">&horbar;</span> <cite title="Source Title"></cite>
             </blockquote>
         </div>
     </div>
