--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
 
             async function updateQuote() {
                 try {
-                    const response = await fetch("https://api.quotable.io/random");
+                    const response = await fetch("https://quoteslate.vercel.app/api/quotes/random");
                     const data = await response.json();
 
                     if (response.ok) {
-                        quote_text.textContent = data.content;
+                        quote_text.textContent = data.quote;
                         cite.textContent = data.author;
                     } else {
                         quote_text.textContent = "An error occured";
